<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".authentication.LoginActivity">

    <ScrollView
        android:id="@+id/scrool"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="changeLanguage"
        android:src="@drawable/png_top_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/language_from_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/svg_language"
        android:layout_marginTop="22dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/world_s_1st"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/img_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_comm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hospitality_community_app"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="23dp"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/text_world"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_or_sign_up"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16dp"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/text_comm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/countryCodeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/text_log"
            app:layout_constraintStart_toStartOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/white"
            app:ccpDialog_backgroundColor="@color/white"
            app:ccp_textSize="16dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            tools:ignore="MissingClass" />

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/phoneCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/countryCodeCard"
            app:layout_constraintTop_toTopOf="@id/countryCodeCard"
            app:layout_constraintStart_toEndOf="@id/countryCodeCard">

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:background="@null"
            android:hint="@string/enter_your_number"
            android:paddingVertical="17dp"
            android:paddingHorizontal="15dp"
            android:maxLines="1"
            android:maxLength="10"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textSize="16dp"
            android:inputType="number"
            android:elevation="2dp"
            android:textColor="@color/black"
            android:textColorHint="#3C000021"/>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/countryCodeCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="25dp"
            app:cardElevation="12dp"
            app:cardCornerRadius="11dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="80dp"
                android:paddingVertical="8dp"
                android:text="@string/continu"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="29dp"
                android:background="@color/green_own"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_continue_with"
            android:fontFamily="@font/montserrat_semibold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:visibility="gone"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/card_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="changeLanguage"
            android:layout_marginTop="8dp"
            android:src="@drawable/google"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_or" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintTop_toBottomOf="@id/img_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_ter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_continuing_you_agree_to_our"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="11dp"
            android:paddingHorizontal="12dp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="10dp"
                android:textColor="@color/black"
                app:layout_constraintHorizontal_bias="0.35"/>

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policies"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="10dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_policies"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="10dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>