<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authentication.PersonalInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintVertical_bias="0.08"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_on"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="28dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="28dp"
                android:textColor="@color/green_own"/>

        </LinearLayout>

    <TextView
        android:id="@+id/text_please_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_some_details"
        android:textSize="10dp"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/round_img"
        app:tint="@color/black"
        app:layout_constraintVertical_bias="0.33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/profile_img"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/img_round"
        app:layout_constraintEnd_toEndOf="@id/img_round"
        app:layout_constraintStart_toStartOf="@id/img_round"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile"
        android:layout_width="235dp"
        android:layout_height="235dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedCornerImage"
        android:padding="1dp"
        app:layout_constraintTop_toTopOf="@id/img_round"
        app:layout_constraintBottom_toBottomOf="@id/img_round"
        app:layout_constraintEnd_toEndOf="@id/img_round"
        app:layout_constraintStart_toStartOf="@id/img_round"/>


    <ImageView
        android:id="@+id/camera"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:src="@drawable/camera_img_black"
        app:layout_constraintBottom_toBottomOf="@id/img_round"
        app:layout_constraintEnd_toEndOf="@id/img_round"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/enter_name"
        android:textColorHint="#AB000000"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toBottomOf="@id/img_round"
        app:layout_constraintBottom_toTopOf="@id/text_email_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_email_def"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/this_is_not_your"
        android:textSize="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:textColor="@color/grey_40"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/enter_email"
        android:textColorHint="#AB000000"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/text_email_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_save_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="45dp"
        app:cardElevation="3dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/grey_40"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:textAlignment="center"
            android:text="@string/save"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="22dp"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>