<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_round">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_will_be_sent_to"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="15dp"
        android:textColor="#8A000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+91 7905845935"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryCodeCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        app:cardElevation="8dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="11dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:textAlignment="center"
            android:text="@string/send_otp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="29dp"
            android:background="@color/green_own"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryCodeCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="9dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:text="@string/change_phone_number"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="19dp"
            android:textAlignment="center"
            android:background="@color/white"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>


</LinearLayout>